--- a/MusicLibaryApp/AddMusicPage.xaml
+++ b/MusicLibaryApp/AddMusicPage.xaml
@@ -11,9 +11,6 @@
     <Grid>
         <StackPanel Orientation="Vertical" Margin="150, 150, 0, 0">
             <StackPanel Orientation="Horizontal" Margin = "400, 60, 0, 0">
-                <Button Content="Select File" Click="SelectButton_Click"/>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal" Margin = "400, 60, 0, 0">
                 <Button Content="Save" Click="SaveButton_Click"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal" Margin = "400, 60, 0, 0">
@@ -23,6 +20,10 @@
         <StackPanel Orientation="Vertical" Margin="150, 150, 0, 0">
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Add Music File" Width =" 100" Height="50"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal" >
+                <Button Content="Select File" Click="SelectButton_Click"/>
+                <TextBox Name="TxtStrFile" Height=" 35" Width="200"/>
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <TextBlock Text="Title" Width =" 100" Height="50"/>
@@ -44,7 +45,11 @@
                 <Button Content="Add Cover Image" Click="AddImageButton_Click"/>
                 <TextBox x:Name="TxtStrImg" Height=" 35" Width="200"/>
             </StackPanel>
-            <Image x:Name="image" HorizontalAlignment="Left" Height="200" Margin="150,400,0,0" VerticalAlignment="Top" Width="200" Stretch="Uniform"/>
+            <StackPanel Orientation="Horizontal" Margin = "0, 20, 0, 0">
+                <TextBlock Text="Cover Image" Width =" 100" Height="50"/>
+                <Image x:Name="image" HorizontalAlignment="Left" Height="200" Margin="0,0,0,0" VerticalAlignment="Top" Width="200" Stretch="Uniform"/>
+            </StackPanel>
+            
         </StackPanel>
     </Grid>
 </Page>
