Regression Bug Fix
- At Music Page
1. Back Button did't work (Xaml-cs code match issue)=>fixed
2. When music/image file was not selected from the file explore and click the cancel button, then it didn't return to the working Add Music Page=>fixed
3. Back to mp3 metadata extraction for the music information

--- a/MusicLibaryApp/AddMusicPage.xaml
+++ b/MusicLibaryApp/AddMusicPage.xaml
@@ -42,7 +42,7 @@
             <TextBox Height="40" Name="EnterAlbum" Grid.Row="2" Grid.Column="1" Margin="0,0,20,0" />
             <TextBox Height="40" Name="EnterSinger"  Grid.Row="3" Grid.Column="1" Margin="0,0,20,0"  />
             <TextBox Height="40" Name="EnterTitle" Grid.Row="1" Grid.Column="1" Margin="0,0,20,0" />
-            <TextBox Height="40" Name="EnteryDate"  Grid.Row="4" Grid.Column="1" Margin="0,0,20,0"  />
+            <TextBox Height="40" Name="EnterDate"  Grid.Row="4" Grid.Column="1" Margin="0,0,20,0"  />
             <Grid Grid.Row="5" Grid.Column="1" Margin="0,0,20,0" VerticalAlignment="Center"  >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
